k8s/cad-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cad-frontend
spec:
  selector:
    matchLabels:
      app: cad-frontend
  template:
    metadata:
      labels:
        app: cad-frontend
    spec:
      containers:
        - name: cad-frontend
          image: ghcr.io/leotschritter/cad-frontend:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          startupProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 30
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: cad-frontend
spec:
  type: ClusterIP
  selector:
    app: cad-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
